data/derived/sp14/progs/unify/prog2576.ml.out
Characters 43-44:
  let f a x = fun (x, a) -> x x in
                              ^
Error: This expression has type 'a -> 'b
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a -> 'b
